--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,7 +1,8 @@
 .container img{
         margin: 0 auto;
-        height: 80vh;
+        height: 100vh;
         margin-bottom: 20px;
+        /* width: 100vh; */
 }
 .container{
     position: relative;
